# m4

./: .gitignore  README.md  arith.m4  build.ninja  cmd.m4  comments.m4  counter.m4  def.m4  diversion.m4  dump.m4  fact.m4  fizzbuzz.m4  high-order.m4  list-example.m4  list.m4  quote.m4  str.m4  test.bash
.github/workflows/: test.yml
exm4/: Cargo.toml
lib/: base.m4  fizzbuzz.m4  high-order.m4  list.m4  list2.m4  math.m4  syntax.m4
m4builder/: Cargo.toml
m4builder/src/: main.rs
m4rs/: Cargo.toml
m4rs/src/: main.rs
rust/: Cargo.toml
src/: base.m4  counter.spec.m4  dict.m4  fizzbuzz.m4  fizzbuzz.spec.m4  functional.spec.m4  high_order.spec.m4  hoge.m4  list.m4  list.spec.m4  math.m4  math.spec.m4  namespace.spec.m4  testing.m4
test/: counter.m4  def.m4  diversion.m4  dump.m4  fizzbuzz.test.m4  high-order.test.m4  list.test.m4  list2.test.m4  math.test.m4  quote.m4
test/__snapshots__/: diversion.snap  dump.snap  fizzbuzz.test.snap  list.test.snap  list2.test.snap  math.test.snap
