[package]
name = "m4rs"
version = "0.1.0"
authors = ["0918nobita <nobita.0918@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.clap]
version = "2"
default-features = false
features = ["suggestions", "color", "wrap_help"]
